[package]
name = "midori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
serde = "1.0.136"
figment = { version = "0.10.6", features = ["env", "toml"] }
poise = { rev = "5e3f777c2f5129b416d76a074fd148b61a1e1ff2", git = "https://github.com/kangalioo/poise.git" }
